Fixed 'overflow-x:hidden' css hack by making base.php's container-fluid for front page. Reorded semantic id and classes for surveys section.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -12,12 +12,11 @@
    ========================================================================== */
 
 body {font-size:100%; }
-html, body {
-  width: auto !important;
-  overflow-x: hidden !important;
-}
-
 .content.row {margin-bottom: 200px;}
+
+.home .main {
+  padding: 0;
+}
 
 /* ==========================================================================
    Navigation
@@ -102,12 +101,14 @@ html, body {
 .hero {position: relative; overflow: hidden; margin-bottom: 0; padding: 0; } 
 .hero-unit {position: relative; overflow: hidden; margin-bottom: 6%;}
 .panner { overflow: hidden; line-height: 0;}
-.panner img { max-width: 4909px;}
-.panner img { width: 500%; max-width: 2500px;}
+.panner img { width: 375%; max-width: 1875px;}
 .branding {background: rgba(0,0,0,0.7); color: #fff; display: block; padding: 0 1%; width: 100%; text-decoration: none; font-size: 1.2em; transition: background-color 0.3s ease; } 
 .branding>p {font-size: 18px; } .surveys {margin-bottom: 2em; } 
-#surveys { width: 100%; padding: 50px 0; color: #fff; text-shadow: 2px 2px 3px rgba(0,0,0,.9); background:url('/wp-content/uploads/2014/05/sdss-telescope-small.png')no-repeat bottom center fixed; background-color: #000; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover; -o-background-size: cover;}
-.flex-caption {color: @body-bg; width: 40%; padding: 10px; margin: 0 0 60px 60px; background-color: #222; background: rgba(0,0,0,.8); position: absolute; display: block; left: 0; bottom: 0; border-left: 4px solid @brand-sdss; } 
+#surveys {display:table; width: 100%; height: 400px; background:url('/wp-content/uploads/2014/05/sdss-telescope-small.png')no-repeat top center fixed; background-size: cover; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-color: #000; 
+ p { color: #fff; 
+      text-shadow: 2px 2px 3px rgba(0,0,0,.9); } 
+      }
+.flex-caption {color: @body-bg; width: 40%; padding: 10px; margin: 0 0 60px 60px; background-color: #222; background: rgba(0,0,0,.8); position: absolute; display: block; left: 0; bottom: 0; border-left: 4px solid @brand-sdss; }
 #myCarousel .nav a small {display:block;}
 #myCarousel .nav {background:#eee;}
 #myCarousel .nav a {border-radius:0px;}
